--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,8 @@ libs = ["lib"]
 optimizer = true
 optimizer_runs = 200
 
-[profile.sepolia]
-rpc_url = "https://sepolia.infura.io/v3/1a34a37dbf4e44409187911e6573a844"
-# Other specific configurations for the sepolia profile
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
