--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/RichJamo/foundry-demo#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.2",
     "web3": "^4.4.0"
   }
 }
